<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.chat.MessageActivity">

    <!-- Toolbar mejorada con un LinearLayout -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_dark">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_chat_m"
                android:contentDescription="@string/name_user" />

            <TextView
                android:id="@+id/nameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/name_user"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarChat"
        android:layout_above="@id/sendMessage"
        android:padding="8dp"/>

    <!-- Caja de mensajes -->
    <LinearLayout
        android:id="@+id/sendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:background="@color/blue_dark"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_attach"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/attach"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btn_update_image_profile"/>

        <EditText
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/message"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="10dp"
            android:minHeight="40dp"/>

        <ImageButton
            android:id="@+id/send"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/send"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_save"/>
    </LinearLayout>

</RelativeLayout>
