<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/txt_select_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:weightSum="2"
        android:orientation="horizontal">

        <!--Gallery-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/image_select"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/txt_select_image" />

            <Button
                android:id="@+id/select_gallery"
                android:text="@string/btn_open_gallery"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

        </LinearLayout>


        <!--Camera-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/camera"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/btn_open_camera" />

            <Button
                android:id="@+id/select_camera"
                android:text="@string/btn_open_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>